--- a/gradio_sms_text_classification.ipynb
+++ b/gradio_sms_text_classification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,19 +43,25 @@
     "    The fitted pipeline is returned to make future predictions.\n",
     "    \"\"\"\n",
     "    # Set the features variable to the text message column.\n",
-    "    \n",
+    "    X = sms_text_df['text_message']\n",
     "    \n",
     "    # Set the target variable to the \"label\" column.\n",
+    "    y = sms_text_df['label']\n",
     "   \n",
     "\n",
     "    # Split data into training and testing and set the test_size = 33%\n",
-    "    \n",
+    "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.33, random_state=42)\n",
     "\n",
     "    # Build a pipeline to transform the test set to compare to the training set.\n",
-    "    \n",
+    "    text_clf = Pipeline([\n",
+    "        ('tfidf', TfidfVectorizer()),\n",
+    "        ('clf', LinearSVC())\n",
+    "    ])\n",
     "\n",
     "    # Fit the model to the transformed training data and return model.\n",
-    "    return "
+    "    text_clf.fit(X_train, y_train)\n",
+    "    \n",
+    "    return text_clf"
    ]
   },
   {
@@ -140,22 +146,33 @@
     }
    ],
    "source": [
-    "# Load the dataset into a DataFrame\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Call the sms_classification function with the DataFrame and set the result to the \"text_clf\" variable\n",
-    "text_clf = "
+    "# Load the dataset into a DataFrame\n",
+    "df = pd.read_csv('Resources/SMSSpamCollection.csv')\n",
+    "df.head()\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/adammillington/anaconda3/lib/python3.11/site-packages/sklearn/svm/_classes.py:31: FutureWarning: The default value of `dual` will change from `True` to `'auto'` in 1.5. Set the value of `dual` explicitly to suppress the warning.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Call the sms_classification function with the DataFrame and set the result to the \"text_clf\" variable\n",
+    "text_clf = sms_classification(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,30 +193,38 @@
     "    classified as spam or not.\n",
     "    \"\"\"\n",
     "    # Create a variable that will hold the prediction of a new text.\n",
+    "    prediction = text_clf.predict([text])[0]\n",
     "    \n",
     "    # Using a conditional if the prediction is \"ham\" return the message:\n",
     "    # f'The text message: \"{text}\", is not spam.' Else, return f'The text message: \"{text}\", is spam.'\n",
+    "    if prediction == 'ham':\n",
+    "        return f'The text message: \"{text}\", is not spam.'\n",
+    "    else:\n",
+    "        return f'The text message: \"{text}\", is spam.'\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Running on local URL:  http://127.0.0.1:7860\n",
+      "Running on local URL:  http://127.0.0.1:7863\n",
+      "IMPORTANT: You are using gradio version 4.28.3, however version 4.29.0 is available, please upgrade.\n",
+      "--------\n",
+      "Running on public URL: https://6fda90bf1eeb090939.gradio.live\n",
       "\n",
-      "To create a public link, set `share=True` in `launch()`.\n"
+      "This share link expires in 72 hours. For free permanent hosting and GPU upgrades, run `gradio deploy` from Terminal to deploy to Spaces (https://huggingface.co/spaces)\n"
      ]
     },
     {
      "data": {
       "text/html": [
-       "<div><iframe src=\"http://127.0.0.1:7860/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+       "<div><iframe src=\"https://6fda90bf1eeb090939.gradio.live\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -212,7 +237,7 @@
      "data": {
       "text/plain": []
      },
-     "execution_count": 6,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,8 +246,15 @@
     "# Create a sms_app that takes a textbox for the inputs and has a textbox for the output.  \n",
     "# Povide labels for each textbox. \n",
     "\n",
+    "# write a gradio app with one input text field and one output text field\n",
+    "sms_app = gr.Interface(\n",
+    "    fn=sms_prediction,\n",
+    "    inputs=gr.Text(label=\"Input the text message to be investigated here\"),\n",
+    "    outputs=gr.Text(label=\"The classification of the text message will appear here.\"))\n",
+    "\n",
     "    \n",
-    "# Launch the app.\n"
+    "# Launch the app.\n",
+    "sms_app.launch(share=True)\n"
    ]
   },
   {
@@ -236,7 +268,17 @@
     "1. You are a lucky winner of $5000!\n",
     "2. You won 2 free tickets to the Super Bowl.\n",
     "3. You won 2 free tickets to the Super Bowl text us to claim your prize.\n",
-    "4. Thanks for registering. Text 4343 to receive free updates on medicare."
+    "4. Thanks for registering. Text 4343 to receive free updates on medicare.\n",
+    "\n",
+    "\n",
+    "## Testing these in the app gives the following results.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "1. Ham\n",
+    "2. Spam\n",
+    "3. Spam\n",
+    "4. Spam"
    ]
   },
   {
@@ -263,7 +305,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
